# oaqjp-final-project-emb-ai

./: .gitignore  2b_application_creation  3a_output_formatting  3b_formatted_output_test  4b_packaging_test  5b_unit_testing_result  8b_static_code_analysis  README.md  pyproject.toml  server.py
EmotionDetection/: __init__.py
scripts/: generate_deployment_image.py  generate_error_handling_image.py
static/: script.js  style.css
templates/: index.html
tests/: test_emotion_detection.py
